--- a/CV.html
+++ b/CV.html
@@ -238,26 +238,26 @@
                     <ul>
                         <li>
                             <div class="sub_title">
-                                tahun1
+                                2020
                             </div>
                             <div class="info_item">
-                                ngapain1
+                                PELATIHAN LKMM TD
                             </div>
                         </li>
                         <li>
                             <div class="sub_title">
-                                tahun2
+                                2019
                             </div>
                             <div class="info_item">
-                                ngapain2
+                                PELATIHAN LKMM PRA-TD
                             </div>
                         </li>
                         <li>
                             <div class="sub_title">
-                                tahun3
+                                2018
                             </div>
                             <div class="info_item">
-                                ngapain3
+                                PANITIA FATIH (Lomba Antar SMP) - TIM LOGISTIK
                             </div>
                         </li>
                     </ul>
@@ -286,7 +286,7 @@
                     </ul>
                 </div>
                 <div class="full_info_item contacts" style="display: none;">
-                    <div class="title">CONTACT</div>
+                    <div class="title">CONTACTS</div>
                     <div class="info_wrap">
                         <ul>
                             <li>
